--- a/DairyProject/templates/c_dashboard.html
+++ b/DairyProject/templates/c_dashboard.html
@@ -1,7 +1,2 @@
 {% load static %}
-{% include 'inc/c_navbar.html' %}
-{% block content %}
-  <!-- Customer Dashboard Content -->
-  <h1>Welcome, {{ user.username }}</h1>
-  <!-- Add your dashboard content here -->
-{% endblock content %}
+  <h3> to customer</h3>
