--- a/DairyProject/templates/registration.html
+++ b/DairyProject/templates/registration.html
@@ -114,9 +114,9 @@
             " class="btn btn-lg btn-primary text-uppercase fw-bold mb-2">SignUp</button>
         </div>
     </form>
-{% for messages in messages %}
-<h6  style="color:red;","text-align:justify;"></h6>
 
+{% for messages in messages %}
+<h6  style="color:red;",></h6>
     {{messages}}</h6>
 {% endfor %}
     <p class="login">Already have an account? <a href="{% url 'login' %}">Login</a></p>
