--- a/DairyProject/templates/inc/navbar.html
+++ b/DairyProject/templates/inc/navbar.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <body>
 <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5">
-            <a href="{% static 'index.html' %}" class="navbar-brand d-flex align-items-center">
+            <a href="{%  url 'home' %}" class="navbar-brand d-flex align-items-center">
             <img class="img-fluid" src="{% static '/img/logo.jpg' %}" height="200" width="100" alt="Logo">
     </a>
     <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -17,16 +17,7 @@
 
             <a href="{% static '/service.html' %}" class="nav-item nav-link">Products</a>
             <a href="{% url 'registration' %}" class="nav-item nav-link">Registration</a>
-            <div class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                <div class="dropdown-menu bg-light m-0">
-                    <a href="{% static '/gallery.html' %}" class="dropdown-item">Gallery</a>
-                    <a href="{% static '/feature.html' %}" class="dropdown-item">Features</a>
-                    <a href="{% static '/team.html' %}" class="dropdown-item">Our Team</a>
-                    <a href="{% static '/testimonial.html' %}" class="dropdown-item">Testimonial</a>
-                    <a href="{% static '/404.html' %}" class="dropdown-item">404 Page</a>
-                </div>
-            </div>
+
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Todays Rate</a>
                 <div class="dropdown-menu bg-light rounded-0 m-0">
