--- a/DairyProject/templates/login.html
+++ b/DairyProject/templates/login.html
@@ -98,7 +98,7 @@ input[type="password"] {
 <body>
     <div class="login-container">
         <h2>Login</h2>
-        <form method="POST" id="login-form" action="{% url 'c_dashboard' %}">
+        <form method="POST" id="login-form">
             {% csrf_token %}
             <div class="form-group">
                 <label for="username"></label>
@@ -108,9 +108,9 @@ input[type="password"] {
                 <label for="password"></label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <button type="submit" class="submit-button">Sign In</button>
+            <button type="submit" >Sign In</button>
             <div class="forget-pass">
-                <a href="#">Forgot Password</a>
+                <a href="{% url "password_reset" %}">Forgot Password</a>
             </div>
         </div>
         </form>
