--- a/DairyProject/templates/inc/navbar.html
+++ b/DairyProject/templates/inc/navbar.html
@@ -11,7 +11,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="{% static '/index.html' %}" class="nav-item nav-link active">Home</a>
+            <a href="{%  url 'home' %}"class="nav-item nav-link active">Home</a>
             <a href="{% static '/about.html' %}" class="nav-item nav-link">About</a>
             <a href="{% url 'login' %}" class="nav-item nav-link">Login</a>
 
@@ -26,7 +26,6 @@
                     <a  class="dropdown-item">Ghee----400/-</a>
                     <a  class="dropdown-item">Butter----300/-</a>
                     <a  class="dropdown-item">Paneer----100/-</a>
-
                 </div>
             </div>
             <a href="{% static '/contact.html' %}" class="nav-item nav-link">Contact</a>
