--- a/DairyProject/templates/login.html
+++ b/DairyProject/templates/login.html
@@ -88,25 +88,21 @@ input[type="password"] {
 .alert-top {
     top: 0;
 }
-
         </style>
-        
-    
-      
-</head>
 
+</head>
 <body>
     <div class="login-container">
         <h2>Login</h2>
         <form method="POST" id="login-form">
             {% csrf_token %}
             <div class="form-group">
-                <label for="username"></label>
-                <input type="text" id="username" name="username" required>
+                <label for="email"></label>
+                <input type="text" id="email" name="email" placeholder="Email"required>
             </div>
             <div class="form-group">
                 <label for="password"></label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" placeholder="Password"required>
             </div>
             <button type="submit" >Sign In</button>
             <div class="forget-pass">
