--- a/DairyProject/templates/index.html
+++ b/DairyProject/templates/index.html
@@ -1,10 +1,10 @@
 {% extends 'layout/main.html' %}
 {% load static %}
 
-{% block body %}
+{% block main %}
 
 
-{% endblock body %}
+{% endblock main %}
 
 
      
