--- a/DairyProject/templates/login.html
+++ b/DairyProject/templates/login.html
@@ -101,16 +101,16 @@ input[type="password"] {
         <form method="POST" id="login-form">
             {% csrf_token %}
             <div class="form-group">
-                <label for="username"></label>
-                <input type="text" id="username" name="username" required>
+                <label for="email"></label>
+                <input type="text" id="email" name="email"  placeholder="Email" required>
             </div>
             <div class="form-group">
                 <label for="password"></label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" placeholder="Password" required>
             </div>
             <button type="submit" >Sign In</button>
             <div class="forget-pass">
-                <a href="{% url "password_reset" %}">Forgot Password</a>
+                <a href="{% url  'password_reset'  %}">Forgot Password</a>
             </div>
         </div>
         </form>
